--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul id = " articles" type = "square">
+		<li>Anywhere But here</li>
+        <li> The Bled</li>
+        <li>Counterparts</li>
+        <li>The Devil Wears Prada</li>
+        <li>The MildWay State</li>
+        <li>Norman Jean</li>
+        <li>Oh Sleeper</li>
+        <li>An Old Dog</li>
+        <li>Pierce the Veil</li>
+        <li>The Plot in You</li>
+		<li>Say Anything</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
